[gd_scene load_steps=98 format=3 uid="uid://crvil3gpy50r7"]

[ext_resource type="Texture2D" uid="uid://duskqc5mvditn" path="res://Assets/Sunnyside_World_Assets/Characters/Zombie/IDLE/base_idle_strip9.png" id="1_ofw25"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_ryt16"]
[ext_resource type="Texture2D" uid="uid://beb1s78qg6mr1" path="res://Assets/Sunnyside_World_Assets/Characters/Human/AXE/base_axe_strip10.png" id="2_aof03"]
[ext_resource type="Texture2D" uid="uid://cxdgi36ow5lxw" path="res://Assets/Sunnyside_World_Assets/Characters/Zombie/RUN/base_run_strip8.png" id="2_du0tt"]
[ext_resource type="Texture2D" uid="uid://d2w755dop2y2m" path="res://Assets/Sunnyside_World_Assets/Characters/Zombie/ATTACK/base_attack_strip10.png" id="2_xjhfn"]
[ext_resource type="Resource" uid="uid://dlh351x1no0ln" path="res://Scripts/InvScripts/InvItems/wheat.tres" id="2_yy6au"]
[ext_resource type="Resource" uid="uid://5efhj0ap46ss" path="res://Scripts/InvScripts/InvItems/carrot.tres" id="3_rnekh"]
[ext_resource type="Texture2D" uid="uid://dny08pfq4ys5k" path="res://Assets/Sunnyside_World_Assets/Characters/Human/WALKING/base_walk_strip8.png" id="3_twh8s"]
[ext_resource type="Resource" uid="uid://dflhjdc1u7oi8" path="res://Scripts/InvScripts/InvItems/potato.tres" id="4_ocqpm"]
[ext_resource type="Texture2D" uid="uid://btsmoblcxysjy" path="res://Assets/Sunnyside_World_Assets/Characters/Zombie/HURT/base_hurt_strip8.png" id="4_skpox"]
[ext_resource type="Script" path="res://Scripts/player_cam_script.gd" id="7_gjie6"]
[ext_resource type="Texture2D" uid="uid://i1spxx50s8fy" path="res://Assets/Sunnyside_World_Assets/Characters/Zombie/DEATH/base_death_strip13.png" id="8_k8oi4"]
[ext_resource type="Script" path="res://Scripts/player_drop_area.gd" id="13_0ptyf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pfpq1"]
size = Vector2(7, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy2o5"]
atlas = ExtResource("2_xjhfn")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_12goa"]
atlas = ExtResource("2_xjhfn")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jibfe"]
atlas = ExtResource("2_xjhfn")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb2h6"]
atlas = ExtResource("2_xjhfn")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjjsx"]
atlas = ExtResource("2_xjhfn")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_502vq"]
atlas = ExtResource("2_xjhfn")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_15lir"]
atlas = ExtResource("2_xjhfn")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ygg3"]
atlas = ExtResource("2_xjhfn")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1fvp"]
atlas = ExtResource("2_xjhfn")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3shlb"]
atlas = ExtResource("2_xjhfn")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh1xe"]
atlas = ExtResource("2_aof03")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_thws4"]
atlas = ExtResource("2_aof03")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2toad"]
atlas = ExtResource("2_aof03")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_enga2"]
atlas = ExtResource("2_aof03")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i5mp"]
atlas = ExtResource("2_aof03")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4js0c"]
atlas = ExtResource("2_aof03")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d1as"]
atlas = ExtResource("2_aof03")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvq3m"]
atlas = ExtResource("2_aof03")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1ro8"]
atlas = ExtResource("2_aof03")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yor33"]
atlas = ExtResource("2_aof03")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_387x7"]
atlas = ExtResource("8_k8oi4")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7q5b"]
atlas = ExtResource("8_k8oi4")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn6hb"]
atlas = ExtResource("8_k8oi4")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k67xr"]
atlas = ExtResource("8_k8oi4")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ksqm"]
atlas = ExtResource("8_k8oi4")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pto2f"]
atlas = ExtResource("8_k8oi4")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3uov"]
atlas = ExtResource("8_k8oi4")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjqlb"]
atlas = ExtResource("8_k8oi4")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo3ra"]
atlas = ExtResource("8_k8oi4")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3qxw"]
atlas = ExtResource("8_k8oi4")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_355fw"]
atlas = ExtResource("8_k8oi4")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a4gu"]
atlas = ExtResource("8_k8oi4")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj02e"]
atlas = ExtResource("8_k8oi4")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs2yo"]
atlas = ExtResource("8_k8oi4")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ancs7"]
atlas = ExtResource("8_k8oi4")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bomg"]
atlas = ExtResource("8_k8oi4")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvhwk"]
atlas = ExtResource("8_k8oi4")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8qtr"]
atlas = ExtResource("8_k8oi4")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov6hy"]
atlas = ExtResource("8_k8oi4")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c46h3"]
atlas = ExtResource("8_k8oi4")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_doijj"]
atlas = ExtResource("8_k8oi4")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkop3"]
atlas = ExtResource("8_k8oi4")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l83ts"]
atlas = ExtResource("8_k8oi4")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt1wa"]
atlas = ExtResource("8_k8oi4")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cshqj"]
atlas = ExtResource("8_k8oi4")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnod3"]
atlas = ExtResource("8_k8oi4")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8reai"]
atlas = ExtResource("4_skpox")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiasw"]
atlas = ExtResource("4_skpox")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cu5"]
atlas = ExtResource("4_skpox")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_niqi3"]
atlas = ExtResource("4_skpox")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgtfb"]
atlas = ExtResource("4_skpox")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o87to"]
atlas = ExtResource("4_skpox")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j6dc"]
atlas = ExtResource("4_skpox")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhg55"]
atlas = ExtResource("4_skpox")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoxay"]
atlas = ExtResource("1_ofw25")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulsc6"]
atlas = ExtResource("1_ofw25")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikb2t"]
atlas = ExtResource("1_ofw25")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2goem"]
atlas = ExtResource("1_ofw25")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kr2r"]
atlas = ExtResource("1_ofw25")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jxbv"]
atlas = ExtResource("1_ofw25")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gilqb"]
atlas = ExtResource("1_ofw25")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0rii"]
atlas = ExtResource("1_ofw25")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpw3e"]
atlas = ExtResource("1_ofw25")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0jeh"]
atlas = ExtResource("2_du0tt")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r2le"]
atlas = ExtResource("2_du0tt")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5flo7"]
atlas = ExtResource("2_du0tt")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc3bj"]
atlas = ExtResource("2_du0tt")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nhqb"]
atlas = ExtResource("2_du0tt")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb15k"]
atlas = ExtResource("2_du0tt")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcxlf"]
atlas = ExtResource("2_du0tt")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi275"]
atlas = ExtResource("2_du0tt")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5da8x"]
atlas = ExtResource("3_twh8s")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fbhn"]
atlas = ExtResource("3_twh8s")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iix4e"]
atlas = ExtResource("3_twh8s")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqpsq"]
atlas = ExtResource("3_twh8s")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1tct"]
atlas = ExtResource("3_twh8s")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_25i3i"]
atlas = ExtResource("3_twh8s")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsp6w"]
atlas = ExtResource("3_twh8s")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_45qjk"]
atlas = ExtResource("3_twh8s")
region = Rect2(672, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2rlj8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy2o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12goa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jibfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb2h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjjsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_502vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15lir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ygg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1fvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3shlb")
}],
"loop": false,
"name": &"attack",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh1xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thws4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2toad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enga2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i5mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4js0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d1as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvq3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1ro8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yor33")
}],
"loop": false,
"name": &"axe",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_387x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7q5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn6hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k67xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ksqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pto2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3uov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjqlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo3ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3qxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_355fw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a4gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj02e")
}],
"loop": true,
"name": &"battleArenaTransfer",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs2yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ancs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bomg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvhwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8qtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov6hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c46h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doijj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkop3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l83ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt1wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cshqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnod3")
}],
"loop": true,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8reai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiasw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niqi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgtfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o87to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j6dc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhg55")
}],
"loop": false,
"name": &"hurt",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoxay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulsc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikb2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2goem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kr2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jxbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gilqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0rii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpw3e")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0jeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r2le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5flo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc3bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nhqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb15k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcxlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi275")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5da8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fbhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iix4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqpsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1tct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25i3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsp6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45qjk")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_flfmw"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_27ij6"]
radius = 21.2132

[sub_resource type="CircleShape2D" id="CircleShape2D_bu4fp"]
radius = 17.1172

[node name="Player" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_ryt16")
wheat_data = ExtResource("2_yy6au")
carrot_data = ExtResource("3_rnekh")
potato_data = ExtResource("4_ocqpm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_pfpq1")

[node name="Parent" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Parent"]
z_index = 1
sprite_frames = SubResource("SpriteFrames_2rlj8")
animation = &"idle"
autoplay = "idle"

[node name="AxeCollider" type="Area2D" parent="Parent"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parent/AxeCollider"]
position = Vector2(24, -2)
shape = SubResource("RectangleShape2D_flfmw")

[node name="weaponCollider" type="Area2D" parent="Parent"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parent/weaponCollider"]
position = Vector2(13, -6)
shape = SubResource("CircleShape2D_27ij6")

[node name="player_pickup_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_pickup_range"]
shape = SubResource("CircleShape2D_bu4fp")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
script = ExtResource("7_gjie6")

[node name="SummonLabel" type="Label" parent="."]
visible = false
offset_left = -32.0
offset_top = 4.0
offset_right = 48.0
offset_bottom = 27.0
text = "SUMMON!"

[node name="ReturnLabel" type="Label" parent="."]
visible = false
offset_left = -48.0
offset_top = -51.0
offset_right = 187.0
offset_bottom = 50.0
text = "SATISFACTORY 


PERFORMANCE"

[node name="PlayerDropArea" type="Panel" parent="."]
offset_left = -11.0
offset_top = 12.0
offset_right = 15.0
offset_bottom = 27.0
tooltip_text = "Drop food here!"
script = ExtResource("13_0ptyf")

[node name="Label" type="Label" parent="PlayerDropArea"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 9
text = "DROP!"

[connection signal="animation_finished" from="Parent/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="Parent/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="Parent/AxeCollider" to="." method="_on_axe_collider_area_entered"]
[connection signal="body_entered" from="Parent/weaponCollider" to="." method="_on_weapon_collider_body_entered"]
